--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "openzeppelin-solidity": "^2.1.2",
     "truffle-hdwallet-provider": "^1.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "dotenv": "^8.2.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
